<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginVertical="4dp"
    >

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/circle_dot"
        android:contentDescription="@string/dot_counting" />


    <TextView
        android:id="@+id/measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:text="@string/measure_placeholder"/>

    <TextView
        android:id="@+id/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        android:fontFamily="@font/nunito_bold"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:text="@string/placeholder_ingredient"/>

</LinearLayout>